Fixed a typo in the section B of the file
The type was referencing to an older model variable instead of modelB which is the model the section was intending to train.

--- a/notebooks/95_Training_Sentence_Transformers.ipynb
+++ b/notebooks/95_Training_Sentence_Transformers.ipynb
@@ -8186,7 +8186,7 @@
     {
       "cell_type": "code",
       "source": [
-        "model.fit(train_objectives=[(train_dataloaderB, train_lossB)],\n",
+        "modelB.fit(train_objectives=[(train_dataloaderB, train_lossB)],\n",
         "          epochs=num_epochsB,\n",
         "          warmup_steps=warmup_stepsB) "
       ],
