Fixed typos referencing ModelB
Updated the references where the author intended to refer to `modelB` instead of `model` variable.

--- a/notebooks/95_Training_Sentence_Transformers.ipynb
+++ b/notebooks/95_Training_Sentence_Transformers.ipynb
@@ -8199,7 +8199,7 @@
     {
       "cell_type": "code",
       "source": [
-        "model.save_to_hub(\n",
+        "modelB.save_to_hub(\n",
         "    \"distilroberta-base-sentence-transformer\", \n",
         "    organization=\"embedding-data\",\n",
         "    train_datasets=[\"embedding-data/sentence-compression\"],\n",
