Move assets to HF dataset + update URLs

--- a/notebooks/56_fine_tune_segformer.ipynb
+++ b/notebooks/56_fine_tune_segformer.ipynb
@@ -20,7 +20,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "![Pizza robot semantic segmentation](https://github.com/segments-tobias/blog/raw/master/assets/56_fine_tune_segformer/pizza-scene.png)"
+        "![Pizza robot semantic segmentation](https://huggingface.co/datasets/huggingface/documentation-images/resolve/main/blog/56_fine_tune_segformer/pizza-scene.png)"
       ]
     },
     {
@@ -127,7 +127,7 @@
         "id": "nlYOPx3OFsnC"
       },
       "source": [
-        "![Sidewalk examples](https://huggingface.co/blog/assets/56_fine_tune_segformer/sidewalk-examples.png)"
+        "![Sidewalk examples](https://huggingface.co/datasets/huggingface/documentation-images/resolve/main/blog/56_fine_tune_segformer/sidewalk-examples.png)"
       ]
     },
     {
@@ -798,7 +798,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "![Labeling](https://github.com/huggingface/blog/raw/main/assets/56_fine_tune_segformer/sidewalk-labeling-crop.gif)"
+        "![Labeling](https://huggingface.co/datasets/huggingface/documentation-images/resolve/main/blog/56_fine_tune_segformer/sidewalk-labeling-crop.gif)"
       ]
     },
     {
@@ -1302,7 +1302,7 @@
         "id": "YP19G_pHJfWS"
       },
       "source": [
-        "![Segmentation model comparison](https://huggingface.co/blog/assets/56_fine_tune_segformer/segformer.png)"
+        "![Segmentation model comparison](https://huggingface.co/datasets/huggingface/documentation-images/resolve/main/blog/56_fine_tune_segformer/segformer.png)"
       ]
     },
     {
@@ -1615,7 +1615,7 @@
         "id": "U69agBxj3TjE"
       },
       "source": [
-        "![Inference widget](https://huggingface.co/blog/assets/56_fine_tune_segformer/widget-poster.png)"
+        "![Inference widget](https://huggingface.co/datasets/huggingface/documentation-images/resolve/main/blog/56_fine_tune_segformer/widget-poster.png)"
       ]
     },
     {
