wip electricity: Autoformer train done

--- a/electricity.ipynb
+++ b/electricity.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM5U9aOrXKRZ7UyHpV5alxa",
+      "authorship_tag": "ABX9TyOzuaxjVvVVEIJbBpEIyEQv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0AovFf7sGUq2",
-        "outputId": "8da8e2e3-e1a6-48dd-b1ee-a01d3c8133d4"
+        "outputId": "cb681269-c364-4d89-bbab-afb88dbfe99f"
       },
       "outputs": [
         {
@@ -71,10 +71,10 @@
             "Requirement already satisfied: pydantic~=1.7 in /usr/local/lib/python3.10/dist-packages (from gluonts[pro,torch]) (1.10.7)\n",
             "Requirement already satisfied: toolz~=0.10 in /usr/local/lib/python3.10/dist-packages (from gluonts[pro,torch]) (0.12.0)\n",
             "Requirement already satisfied: typing-extensions~=4.0 in /usr/local/lib/python3.10/dist-packages (from gluonts[pro,torch]) (4.5.0)\n",
-            "Requirement already satisfied: orjson in /usr/local/lib/python3.10/dist-packages (from gluonts[pro,torch]) (3.9.1)\n",
             "Requirement already satisfied: pytorch-lightning<3,>=1.5 in /usr/local/lib/python3.10/dist-packages (from gluonts[pro,torch]) (2.0.3)\n",
             "Requirement already satisfied: protobuf~=3.19.0 in /usr/local/lib/python3.10/dist-packages (from gluonts[pro,torch]) (3.19.6)\n",
             "Requirement already satisfied: scipy~=1.10 in /usr/local/lib/python3.10/dist-packages (from gluonts[pro,torch]) (1.10.1)\n",
+            "Requirement already satisfied: orjson in /usr/local/lib/python3.10/dist-packages (from gluonts[pro,torch]) (3.9.1)\n",
             "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp->datasets) (23.1.0)\n",
             "Requirement already satisfied: charset-normalizer<4.0,>=2.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp->datasets) (2.0.12)\n",
             "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/local/lib/python3.10/dist-packages (from aiohttp->datasets) (6.0.4)\n",
@@ -475,14 +475,14 @@
     {
       "cell_type": "code",
       "source": [
-        "# train % test dataloaders\n",
+        "# train & test dataloaders\n",
         "\n",
         "train_dataloader = create_train_dataloader(\n",
         "    config=config,\n",
         "    freq=freq,\n",
         "    data=train_dataset,\n",
-        "    batch_size=128,\n",
-        "    num_batches_per_epoch=100,\n",
+        "    batch_size=batch_size,\n",
+        "    num_batches_per_epoch=num_batches_per_epoch,\n",
         "    shuffle_buffer_length=1024,\n",
         ")\n",
         "\n",
@@ -505,7 +505,7 @@
         "from accelerate import Accelerator\n",
         "from torch.optim import AdamW\n",
         "\n",
-        "epochs = 25\n",
+        "epochs = epochs\n",
         "loss_history = []\n",
         "\n",
         "accelerator = Accelerator()\n",
@@ -554,7 +554,7 @@
           "height": 1000
         },
         "id": "XKpQpYCyPW0j",
-        "outputId": "a940a9e3-fa11-4cd5-9bb4-01388d94fdd5"
+        "outputId": "befb5e51-7406-4393-b0cc-8852ed5541ed"
       },
       "execution_count": 10,
       "outputs": [
@@ -562,7 +562,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "8.02268123626709\n"
+            "8.27819538116455\n",
+            "6.773143768310547\n",
+            "6.69601583480835\n"
           ]
         },
         {
