wip electricity: added loss vis, and comment other datasets

--- a/electricity.ipynb
+++ b/electricity.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOzuaxjVvVVEIJbBpEIyEQv",
+      "authorship_tag": "ABX9TyOgbUnDuIaqOl031DIv/Z9N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -110,16 +110,16 @@
       "source": [
         "from gluonts.dataset.repository.datasets import get_dataset\n",
         "\n",
-        "traffic_dataset = get_dataset(\"traffic\")\n",
+        "# traffic_dataset = get_dataset(\"traffic\")\n",
         "electricity_dataset = get_dataset(\"electricity\")\n",
-        "exchange_dataset = get_dataset(\"exchange_rate\")\n",
+        "# exchange_dataset = get_dataset(\"exchange_rate\")\n",
         "\n",
         "dataset = electricity_dataset"
       ],
       "metadata": {
         "id": "x_RQzmwTG51R"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -133,7 +133,7 @@
       "metadata": {
         "id": "icaHTCTuL6qC"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -258,7 +258,7 @@
       "metadata": {
         "id": "ZIX7U3lCMjZc"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -302,7 +302,7 @@
       "metadata": {
         "id": "J-wbEyfXM1wk"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -406,7 +406,7 @@
       "metadata": {
         "id": "yaGB1u_RPNbo"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -423,7 +423,7 @@
       "metadata": {
         "id": "rs-seSYAR4Pu"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -469,7 +469,7 @@
       "metadata": {
         "id": "8E8SqNk6QNjT"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -496,7 +496,7 @@
       "metadata": {
         "id": "ntTIffoBBebX"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -556,7 +556,7 @@
         "id": "XKpQpYCyPW0j",
         "outputId": "befb5e51-7406-4393-b0cc-8852ed5541ed"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -789,6 +789,26 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# view training\n",
+        "loss_history = np.array(loss_history).reshape(-1)\n",
+        "x = range(loss_history.shape[0])\n",
+        "plt.figure(figsize=(10, 5))\n",
+        "plt.plot(x, loss_history, label=\"train\")\n",
+        "plt.title(\"Loss\", fontsize=15)\n",
+        "plt.legend(loc=\"upper right\")\n",
+        "plt.xlabel(\"iteration\")\n",
+        "plt.ylabel(\"nll\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "R4kjx075KIgz"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
