wip exchange: added loss viz, continue training after

--- a/exchange-rate.ipynb
+++ b/exchange-rate.ipynb
@@ -571,10 +571,58 @@
             "-2.811861753463745\n",
             "-2.7641191482543945\n",
             "-2.8175594806671143\n",
-            "-2.824106454849243\n"
+            "-2.824106454849243\n",
+            "-2.9667859077453613\n",
+            "-2.9799063205718994\n",
+            "-2.9262120723724365\n",
+            "-3.1495563983917236\n",
+            "-2.6135854721069336\n",
+            "-2.9390065670013428\n",
+            "-2.814643621444702\n",
+            "-1.2353416681289673\n",
+            "-3.0809223651885986\n",
+            "-3.0172221660614014\n",
+            "-2.6072890758514404\n",
+            "-3.035029172897339\n",
+            "-3.089967966079712\n",
+            "-2.8964600563049316\n",
+            "-2.7464661598205566\n",
+            "-2.922062873840332\n",
+            "-2.9780426025390625\n",
+            "-3.0812268257141113\n",
+            "-2.9480276107788086\n",
+            "-2.9126193523406982\n",
+            "-2.8907063007354736\n",
+            "-2.939147472381592\n",
+            "-2.822265148162842\n",
+            "-2.886277198791504\n",
+            "-3.0305755138397217\n",
+            "-2.765221357345581\n",
+            "-2.616320848464966\n",
+            "-3.1625189781188965\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# view training\n",
+        "loss_history = np.array(loss_history).reshape(-1)\n",
+        "x = range(loss_history.shape[0])\n",
+        "plt.figure(figsize=(10, 5))\n",
+        "plt.plot(x, loss_history, label=\"train\")\n",
+        "plt.title(\"Loss\", fontsize=15)\n",
+        "plt.legend(loc=\"upper right\")\n",
+        "plt.xlabel(\"iteration\")\n",
+        "plt.ylabel(\"nll\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "rpCSHoERJZhq"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
