install from source

--- a/electricity.ipynb
+++ b/electricity.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOg2QFBHV9DJ9TkSnUZDgHj",
+      "authorship_tag": "ABX9TyO+Becxd7jMsT1XMR9k6Ud8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,7 +102,7 @@
         }
       ],
       "source": [
-        "!pip install -q transformers datasets evaluate accelerate \"gluonts[torch]\" ujson tqdm huggingface_hub\n",
+        "!pip install -q git+https://github.com/huggingface/transformers datasets evaluate accelerate \"gluonts[torch]\" ujson tqdm huggingface_hub\n",
         "!pip install -q protobuf --upgrade # without it, the evaluation code fails"
       ]
     },
