--- a/notebooks/101_train-decision-transformers.ipynb
+++ b/notebooks/101_train-decision-transformers.ipynb
@@ -105,7 +105,7 @@
       },
       "outputs": [],
       "source": [
-        "!apt-get install -y \\\n",
+        "!apt-get update && apt-get install -y \\\n",
         "    libgl1-mesa-dev \\\n",
         "    libgl1-mesa-glx \\\n",
         "    libglew-dev \\\n",
@@ -133,6 +133,7 @@
       },
       "outputs": [],
       "source": [
+        "!pip install swig\n",
         "!pip install gym==0.21.0\n",
         "!pip install free-mujoco-py\n",
         "!pip install transformers\n",
