--- a/notebooks/101_train-decision-transformers.ipynb
+++ b/notebooks/101_train-decision-transformers.ipynb
@@ -133,7 +133,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install swig\n",
+        "!pip install swig mujoco\n",
         "!pip install gym==0.21.0\n",
         "!pip install free-mujoco-py\n",
         "!pip install transformers\n",
