Replace feature extractor

--- a/notebooks/56_fine_tune_segformer.ipynb
+++ b/notebooks/56_fine_tune_segformer.ipynb
@@ -1201,7 +1201,7 @@
         "id": "EobXJvy2EAQy"
       },
       "source": [
-        "## Feature extractor & data augmentation"
+        "## Image processor & data augmentation"
       ]
     },
     {
@@ -1210,7 +1210,7 @@
         "id": "Za3n6MH1UuDb"
       },
       "source": [
-        "A SegFormer model expects the input to be of a certain shape. To transform our training data to match the expected shape, we can use `SegFormerFeatureExtractor`. We could use the `ds.map` function to apply the feature extractor to the whole training dataset in advance, but this can take up a lot of disk space. Instead, we'll use a *transform*, which will only prepare a batch of data when that data is actually used (on-the-fly). This way, we can start training without waiting for further data preprocessing.\n",
+        "A SegFormer model expects the input to be of a certain shape. To transform our training data to match the expected shape, we can use `SegFormerImageProcessor`. We could use the `ds.map` function to apply the image processor to the whole training dataset in advance, but this can take up a lot of disk space. Instead, we'll use a *transform*, which will only prepare a batch of data when that data is actually used (on-the-fly). This way, we can start training without waiting for further data preprocessing.\n",
         "\n",
         "In our transform, we'll also define some data augmentations to make our model more resilient to different lighting conditions. We'll use the [`ColorJitter`](https://pytorch.org/vision/main/generated/torchvision.transforms.ColorJitter.html) function from `torchvision` to randomly change the brightness, contrast, saturation, and hue of the images in the batch."
       ]
@@ -1243,23 +1243,23 @@
       "source": [
         "from torchvision.transforms import ColorJitter\n",
         "from transformers import (\n",
-        "    SegformerFeatureExtractor,\n",
+        "    SegformerImageProcessor,\n",
         ")\n",
         "\n",
-        "feature_extractor = SegformerFeatureExtractor()\n",
+        "processor = SegformerImageProcessor()\n",
         "jitter = ColorJitter(brightness=0.25, contrast=0.25, saturation=0.25, hue=0.1) \n",
         "\n",
         "def train_transforms(example_batch):\n",
         "    images = [jitter(x) for x in example_batch['pixel_values']]\n",
         "    labels = [x for x in example_batch['label']]\n",
-        "    inputs = feature_extractor(images, labels)\n",
+        "    inputs = processor(images, labels)\n",
         "    return inputs\n",
         "\n",
         "\n",
         "def val_transforms(example_batch):\n",
         "    images = [x for x in example_batch['pixel_values']]\n",
         "    labels = [x for x in example_batch['label']]\n",
-        "    inputs = feature_extractor(images, labels)\n",
+        "    inputs = processor(images, labels)\n",
         "    return inputs\n",
         "\n",
         "\n",
@@ -1488,7 +1488,7 @@
         "            references=labels,\n",
         "            num_labels=len(id2label),\n",
         "            ignore_index=0,\n",
-        "            reduce_labels=feature_extractor.do_reduce_labels,\n",
+        "            reduce_labels=processor.do_reduce_labels,\n",
         "        )\n",
         "    \n",
         "    # add per category metrics as individual key-value pairs\n",
@@ -1565,7 +1565,7 @@
         "id": "YlOal7giORmw"
       },
       "source": [
-        "When we're done with training, we can push our fine-tuned model and the feature extractor to the Hugging Face hub.\n",
+        "When we're done with training, we can push our fine-tuned model and the image processor to the Hugging Face hub.\n",
         "\n",
         "This will also automatically create a model card with our results. We'll supply some extra information in `kwargs` to make the model card more complete."
       ]
@@ -1584,7 +1584,7 @@
         "    \"dataset\": hf_dataset_identifier,\n",
         "}\n",
         "\n",
-        "feature_extractor.push_to_hub(hub_model_id)\n",
+        "processor.push_to_hub(hub_model_id)\n",
         "trainer.push_to_hub(**kwargs)"
       ]
     },
@@ -1645,9 +1645,9 @@
       },
       "outputs": [],
       "source": [
-        "from transformers import SegformerFeatureExtractor, SegformerForSemanticSegmentation\n",
+        "from transformers import SegformerImageProcessor, SegformerForSemanticSegmentation\n",
         "\n",
-        "feature_extractor = SegformerFeatureExtractor.from_pretrained(\"nvidia/segformer-b0-finetuned-ade-512-512\")\n",
+        "processor = SegformerImageProcessor.from_pretrained(\"nvidia/segformer-b0-finetuned-ade-512-512\")\n",
         "model = SegformerForSemanticSegmentation.from_pretrained(f\"{hf_username}/{hub_model_id}\")"
       ]
     },
@@ -1679,7 +1679,7 @@
         "id": "7m7IfMv6R3_5"
       },
       "source": [
-        "To segment this test image, we first need to prepare the image using the feature extractor. Then we forward it through the model.\n",
+        "To segment this test image, we first need to prepare the image using the image processor. Then we forward it through the model.\n",
         "\n",
         "We also need to remember to upscale the output logits to the original image size. In order to get the actual category predictions, we just have to apply an `argmax` on the logits."
       ]
@@ -1694,7 +1694,7 @@
       "source": [
         "from torch import nn\n",
         "\n",
-        "inputs = feature_extractor(images=image, return_tensors=\"pt\")\n",
+        "inputs = processor(images=image, return_tensors=\"pt\")\n",
         "outputs = model(**inputs)\n",
         "logits = outputs.logits  # shape (batch_size, num_labels, height/4, width/4)\n",
         "\n",
